# _ARCH_polymarket-bindings

./: README.md  pom.xml
libs/archive/native-secp256k1-java/: CMakeLists.txt  README.md  conanfile.py  dockerpack.yml
libs/archive/native-secp256k1-java/.circleci/: config.yml  deploy.sh  setup.sh
libs/archive/native-secp256k1-java/cfg/: secp256k1_config.h.in  secp256k1_java-config.cmake.in
libs/archive/native-secp256k1-java/include/: secp256k1.h  secp256k1_config.h
libs/archive/native-secp256k1-java/modules/: package.cmake
libs/archive/native-secp256k1-java/packaging/: build_all.sh
libs/archive/native-secp256k1-java/src/: ecmult_static_context.h  field_10x26_impl.h  secp256k1.cpp  util.h
libs/archive/native-secp256k1-java/src/asm/: field_10x26_arm.s
libs/archive/native-secp256k1-java/src/java/: App.java  NativeSecp256k1.h
libs/archive/native-secp256k1-java/src/java/cryptography/elliptic/: NativeSecp256k1.java
libs/archive/native-secp256k1-java/src/modules/ecdh/: main_impl.h
libs/archive/native-secp256k1-java/src/modules/recovery/: main_impl.h
src/main/java/: App.java
src/main/java/benchmarks/: Benchmarks.java  RandomBenchmarks.java
src/main/java/clob/: PaginatedWrapper.java  Requests.java
src/main/java/clob/auth/: APIKeyCredentials.java  AuthenticationCredentials.java  AuthenticationRequests.java  package.md
src/main/java/clob/auth/eip712/: ClobAuthDomainStruct.java  ClobAuthStruct.java
src/main/java/clob/eip712/: ClobAuthDomainStruct.java  ClobAuthStruct.java
src/main/java/clob/headers/: AuthenticationHeaders.java  HeaderSet.java  RequestArgs.java
src/main/java/clob/markets/: Market.java  MarketRequests.java  Rewards.java  SimplifiedMarket.java  Token.java
src/main/java/clob/markets/reqobj/: GetMarketsWrapper.java  GetSamplingMarketsWrapper.java  GetSamplingSimplifiedMarketsWrapper.java  GetSimplifiedMarketsWrapper.java
src/main/java/clob/markets/types/: GetMarketsWrapper.java  GetSamplingMarketsWrapper.java  GetSamplingSimplifiedMarketsWrapper.java  GetSimplifiedMarketsWrapper.java  Market.java  Rates.java  Rewards.java  SimplifiedMarket.java  Token.java
src/main/java/clob/orders/v1/: OrderRequests.java
src/main/java/clob/orders/v1/types/: CreateOrderOptions.java  Order.java  OrderAmounts.java  OrderArgs.java  OrderData.java  RoundConfig.java
src/main/java/clob/orders/v2/: OrderBuilder.java  OrderRequests.java  OrderUtils.java
src/main/java/clob/orders/v2/types/: OrderAmount.java  SignedOrder.java
src/main/java/clob/orders/v2/types/args/: OrderArgs.java  OrderSide.java  OrderType.java  Signatures.java  TickSize.java
src/main/java/clob/orders/v2/types/config/: ContractConfiguration.java  OrderOptions.java  RoundingConfiguration.java
src/main/java/clob/orders/v2/types/eip712/: OrderStruct.java  PolymarketCTFDomainStruct.java
src/main/java/clob/orders/v3/: OrderUtils.java
src/main/java/clob/orders/v3/types/args/: OrderArgs.java  OrderSide.java  OrderType.java  Signatures.java  TickSize.java
src/main/java/clob/orders/v3/types/config/: ContractConfiguration.java  OrderOptions.java  RoundingConfiguration.java
src/main/java/clob/orders/v3/types/data/: OrderAmount.java  OrderData.java
src/main/java/clob/quotes/: QuoteRequests.java
src/main/java/clob/quotes/types/: BookParams.java  OrderSummary.java  Orderbook.java
src/main/java/clob/rest/: Requests.java
src/main/java/clob/rest/auth/: AuthenticationRequests.java
src/main/java/clob/rest/headers/: AuthenticationHeaders.java  HeaderSet.java  RequestArgs.java
src/main/java/clob/rest/markets/: MarketRequests.java
src/main/java/cryptography/elliptic/: NativeSecp256k1.java  NativeSecp256k1Util.java
src/main/java/cryptography/hash/: Keccak256.java
src/main/java/cryptography/keys/: Key.java  KeyLoader.java  KeyPair.java  MalformedPrivateKeyException.java
src/main/java/cryptography/sign/: HMAC_SHA256.java
src/main/java/cryptography/utils/: HexUtils.java  JniLoader.java
src/main/java/eth/: Address.java  CryptoUtils.java  EthUtils.java
src/main/java/eth/eip712/: EIP712HashStruct.java  EIP712Signature.java
src/main/java/eth/eip712/types/: EIP712AtomicAddress.java  EIP712AtomicBoolean.java  EIP712AtomicBytes.java  EIP712AtomicInt32.java  EIP712AtomicUInt256.java  EIP712DynamicBytes.java  EIP712DynamicString.java  EIP712Type.java  InvalidValueException.java
src/test/java/clob/markets/: MarketEndpointTest.java
src/test/java/develop/: AppTest.java
